force-app/main/default/objects/CAMPX__Village_Task__c/CAMPX__Village_Task__c.object-meta.xml
<CustomObject>
    <description>Village Task: The actual actions villagers take to execute a Family Support Plan.</description>
    <label>Village Task</label>
    <nameField>
        <displayFormat>VT-{00000}</displayFormat>
        <label>Village Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Village Tasks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>