force-app/main/default/objects/CAMPX__Village_Task__c/fields/CAMPX__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Due_Date__c</fullName>
    <description>Due date for this task.</description>
    <inlineHelpText>Set when the task should be completed by. Use with Status to manage progress.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>