force-app/main/default/objects/CAMPX__Village_Task__c/fields/CAMPX__Family_Support_Plan__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Family_Support_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this task to its parent Family Support Plan.</description>
    <inlineHelpText>Select the Family Support Plan this task belongs to. This creates a parent-child relationship so tasks appear on the plan.</inlineHelpText>
    <label>Family Support Plan</label>
    <referenceTo>CAMPX__Family_Support_Plan__c</referenceTo>
    <relationshipLabel>Village Tasks</relationshipLabel>
    <relationshipName>Village_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>