force-app/main/default/objects/CAMPX__Village_Task__c/fields/CAMPX__Instructions__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Instructions__c</fullName>
    <description>Literal instructions on what needs to be done.</description>
    <inlineHelpText>Provide detailed steps or instructions to complete the task.</inlineHelpText>
    <label>Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>