force-app/main/default/objects/CAMPX__Village_Task__c/fields/CAMPX__Is_Baby_Safety_Critical__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Is_Baby_Safety_Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True for tasks involving baby safety (crib assembly, electrical work, etc.).</description>
    <inlineHelpText>Check if this task is safety-critical for the baby. Use this to flag tasks that may need review or priority.</inlineHelpText>
    <label>Is Baby Safety Critical</label>
    <type>Checkbox</type>
</CustomField>