force-app/main/default/objects/CAMPX__Village_Task__c/fields/CAMPX__Status__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Status__c</fullName>
    <description>Current status of the task.</description>
    <inlineHelpText>Track progress of the task: Not Started, In Progress, Completed, or Blocked.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>