force-app/main/default/objects/CAMPX__Village_Task__c/fields/CAMPX__Story_Context__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Story_Context__c</fullName>
    <description>Narrative explanation of the task in-world.</description>
    <inlineHelpText>Write the story context for this task. Example: &quot;Finn wants to make sure the night light is soft enough not to wake Baby Shaya but bright enough for late-night diaper changes.&quot;</inlineHelpText>
    <label>Story Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>