force-app/main/default/objects/CAMPX__Village_Task__c/fields/CAMPX__Support_Phase__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Support_Phase__c</fullName>
    <description>Phase of support when this task occurs.</description>
    <inlineHelpText>Indicate whether the task is planned for before or after the baby arrives.</inlineHelpText>
    <label>Support Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Before Baby Arrives</fullName>
                <default>true</default>
                <label>Before Baby Arrives</label>
            </value>
            <value>
                <fullName>After Baby Arrives</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>