force-app/main/default/objects/CAMPX__Village_Task__c/fields/CAMPX__Task_Type__c.field-meta.xml
<CustomField>
    <fullName>CAMPX__Task_Type__c</fullName>
    <description>Type of task being performed.</description>
    <inlineHelpText>Categorize the task by type to help with filtering and reporting.</inlineHelpText>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Build / Fix</fullName>
            </value>
            <value>
                <fullName>Decorate</fullName>
            </value>
            <value>
                <fullName>Cook / Deliver Meal</fullName>
            </value>
            <value>
                <fullName>Music / Lullaby</fullName>
            </value>
            <value>
                <fullName>Health &amp; Safety Check</fullName>
            </value>
            <value>
                <fullName>Garden / Outdoor</fullName>
            </value>
            <value>
                <fullName>Gifts &amp; Keepsakes</fullName>
            </value>
            <value>
                <fullName>Organize / Coordinate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>